2012-05-12  Valek Filippov

		* XLS: add tooltips for hd tree.
		* RTF: initial support.
		* Added emf/wmf to commands.

2012-04-25  Valek Filippov

		* CDR: more saving.

2012-04-25  Valek Filippov

		* CDR: experimental saving.

2012-04-10  Valek Filippov

		* CDR/CMX: clean-up decompression, remove garbage

2012-03-10  Valek Filippov

		* CDR: initial 'loda' for ver5.

2012-03-10  Valek Filippov

		* CDR: parse 'fild' flags.

2012-03-10  Valek Filippov

		* CDR: 'trfd' adjustments.
		* CDR: 'ttil', 'lnkt'.
		* CDR: activate fild/outl.
		* More utils.

2012-03-09  Valek Filippov

		* QPW: minimal support.

2012-03-05  Valek Filippov

		* CDR: 'fild' type 9 for ver 13+.

2012-03-05  Valek Filippov

		* CDR: 'loda' 0x1e for ver 15.

2012-03-02  Valek Filippov

		* CDR: 'loda' 0x2eea

2012-03-01  Valek Filippov

		* CDR: 'bmpf' preview.
		* CDR: more 'fild' type 7.

2012-02-29  Valek Filippov

		* CDR: fild type 2 for v13.

2012-02-27  Valek Filippov

		* ICC: initial support.
		* CMX: initial support.

2012-02-26  Valek Filippov

		* CDR: initial support for pics rendering for 'bmp '.

2012-02-22  Valek Filippov

		* CDR: 'outl' more flags.

2012-02-23  Fridrich Strba

		* CDR: 'outl' 'behind fill' flag.

2012-02-22  Valek Filippov

		* CDR: 'fild' gradients, 0x25 coords.

2012-02-20  Valek Filippov

		* Fix search.
		* CDR: more 'stlt', more 'txsm'.
		* CDR: 'stlt' and 'txsm' for ver > 12.

2012-02-19  Valek Filippov

		* CDR: more 'stlt'.

2012-02-18  Valek Filippov

		* CDR: experimental 'guid'.
		* CDR: 'font'.
		* CDR: more 'txsm'.

2012-02-14  Valek Filippov

		* CDR: more 'bmp '.

2012-02-13  Valek Filippov

		* CDR: more 'stlt'.

2012-02-12  Valek Filippov

		* CDR: initial 'stlt'

2012-02-11  Valek Filippov

		* CDR: write down some 'txsm' findings.

2012-02-10  Valek Filippov

		* DOC: Commit vmiklos patch.

2012-02-08  Valek Filippov

		* CDR: bmpf, bmp, 0x1e for bitmaps.

2012-02-04  Valek Filippov

		* CDR: fix from Fridrich.
