@@ -1,3 +1,7 @@
+2012-05-23  Valek Filippov
+
+		* "$deflate@" command.
+
 2012-05-12  Valek Filippov
 
 		* XLS: add tooltips for hd tree.
